--- a/core/notebooks/notebook02_numpy.qmd
+++ b/core/notebooks/notebook02_numpy.qmd
@@ -4,19 +4,19 @@ jupyter: python3
 ---
 
 
-`NumPy` is the fundamental package for scientific computing with Python. It contains among other things:
+[`NumPy`](https://numpy.org) is the fundamental package for scientific computing with Python. It contains among other things:
 
 - a powerful N-dimensional array object
-- sophisticated (broadcasting) functions
+- (sophisticated) broadcasting functions
 - tools for integrating C/C++ and Fortran code
-- useful linear algebra, Fourier transform, and random number capabilities
+- useful linear algebra, Fourier transform, and random generation capabilities
 
-Besides its obvious scientific uses, NumPy can also be used as an efficient multi-dimensional container of generic data. Arbitrary data-types can be defined. This allows NumPy to seamlessly and speedily integrate with a wide variety of databases.
+Besides its obvious scientific uses, `NumPy` can also be used as an efficient multi-dimensional container for general data. Arbitrary data-types can be defined. This allows `NumPy` to seamlessly and speedily integrate with a wide variety of databases.
 
-Library documentation: <a>http://www.numpy.org/</a>
+Library documentation: <a>http://numpy.org/</a>
 
 
-# The base `numpy.array` object
+## The base `numpy.array` object
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:03:56.772810Z', start_time: '2022-01-19T10:03:56.767960Z'}
@@ -59,7 +59,7 @@ v.dtype
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:04:40.960057Z', start_time: '2022-01-19T10:04:40.955004Z'}
-.uint8np is int
+np.uint8 is int
 ```
 
 ```{python}
@@ -73,7 +73,7 @@ np.uint16 is int
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:04:45.206350Z', start_time: '2022-01-19T10:04:45.201261Z'}
-np.uint32
+np.uint32  is int
 ```
 
 ```{python}
@@ -132,7 +132,7 @@ a[42] = 1025
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:09:34.115461Z', start_time: '2022-01-19T10:09:34.109542Z'}
-np.iinfo(np.int16)
+np.info(np.int16)
 ```
 
 ```{python}
@@ -180,9 +180,13 @@ a
 b
 ```
 
-**Warning**
+::: {.callout-warning}
 
 Beware of the dimensions: a 1D array is not the same as a 2D array with 1 column
+
+::: 
+
+
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:10:30.211477Z', start_time: '2022-01-19T10:10:30.204724Z'}
@@ -197,6 +201,11 @@ a2 = np.array([1, 2, 3])
 print(a2, a2.shape, a2.ndim)
 ```
 
+
+[More on NumPy quickstart](https://numpy.org/devdocs/user/quickstart.html)
+
+## Matrix multiplication
+
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:11:41.023400Z', start_time: '2022-01-19T10:11:41.018032Z'}
 #| scrolled: true
@@ -204,16 +213,18 @@ a2.dot(a1) # inner product
 ```
 
 ```{python}
-( np.array([a2])
-     .transpose() # column vector
-     .dot(
-        np.array([a1])
-     )
+( 
+    np.array([a2])
+        .transpose() # column vector
+        .dot(np.array([a1]))
 ) # column vector multiplied by row vector
 ```
 
 ```{python}
-np.array([a2]).transpose()#.shape
+(
+    np.array([a2])
+        .transpose()#.shape
+)
 ```
 
 ```{python}
@@ -264,6 +275,8 @@ y
 ```{python}
 x @ y, x.dot(y)
 ```
+
+## Generating arrays
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:12:34.268059Z', start_time: '2022-01-19T10:12:34.260897Z'}
@@ -450,11 +463,11 @@ print(B[row_mask])
 A, A[row_mask] , A[:,row_mask]
 ```
 
-# Copies
+## Copies
 
-Don't forget that `python` **does not make copies unless told to do so** (same as with any mutable type)
+Don't forget that `python` *does not make copies unless told to do so* (same as with any mutable type)
 
-If you are not careful enough, this typically leads to a **lot of errors** and to being fired !!
+If you are not careful enough, this typically leads to a *lot of errors* and to being fired !!
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:23:51.294522Z', start_time: '2022-01-19T10:23:51.288358Z'}
@@ -526,7 +539,11 @@ y = x
 y, id(y), id(x), y is x
 ```
 
-**Final warning**
+::: {.callout-warning}
+
+### Final warning
+
+:::
 
 In the next line you copy the values of `x` into an existing array `y` (of same size...)
 
@@ -548,16 +565,16 @@ y is x
 ```
 
 
-# Miscellanea
+## Miscellanea
 
-## Non-numerical values
+### Non-numerical values
 
 A `numpy` array can contain other things than numeric types
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:30:12.402445Z', start_time: '2022-01-19T10:30:12.399156Z'}
 #| slideshow: {slide_type: '-'}
-arr = np.array(['ou', 'là', 'là', ",ç'est", 'dur', 'python'])
+arr = np.array(['Labore', 'neque', 'ipsum', 'ut', 'non', 'quiquia', 'dolore.'])
 arr, arr.shape, arr.dtype
 ```
 
@@ -631,7 +648,7 @@ a1.dot(a2)
 np.outer(a1, a2)
 ```
 
-# Sparse matrices
+## Sparse matrices
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:37:31.887375Z', start_time: '2022-01-19T10:37:31.882051Z'}
@@ -905,7 +922,7 @@ evals
 evecs
 ```
 
-### Singular value decomposition (SVD)
+## Singular value decomposition (SVD)
 
 Decomposes any matrix $A \in \mathbb R^{m \times n}$ as follows:
 $$
@@ -913,7 +930,7 @@ A = U \times S \times V^\top
 $$
 where 
 - $U$ and $V$ are orthonormal matrices (meaning that $U^\top \times U = I$ and $V^\top \times V = I$)
-- $S$ is a diagonal matrix that contains the singular values in decreasing order
+- $S$ is a diagonal matrix that contains the *singular* values in non-increasing order
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:47:54.504658Z', start_time: '2022-01-19T10:47:54.500097Z'}
@@ -974,8 +991,6 @@ plt.imshow(X)
 _ = plt.axis('off')
 ```
 
-**TODO** DeprecationWarning: scipy.misc.face has been deprecated in SciPy v1.10.0; and will be completely removed in SciPy v1.12.0. Dataset methods have moved into the scipy.datasets module. Use scipy.datasets.face instead.
-  X = face()
 
 ```{python}
 #| ExecuteTime: {end_time: '2022-01-19T10:53:29.332090Z', start_time: '2022-01-19T10:53:28.069519Z'}
@@ -1051,3 +1066,71 @@ for i, r in enumerate(ranks):
 ```
 
 
+::: {.callout-tip}
+
+### Variations
+
+- 
+
+:::
+
+
+```{.python}
+    """Generator for low rank 
+    approximation of a matrix X using truncated SVD.
+
+    Args:
+        X (numpy.ndarray): a numerical matrix
+
+    Yields:
+        numpy.ndarray: 
+    """
+```
+```{python}
+def gen_rank_k_approx(X):
+    """Generator for low rank 
+    approximation of a matrix X using truncated SVD.
+
+    Args:
+        X (numpy.ndarray): a numerical matrix
+
+    Yields:
+        (int,numpy.ndarray): rank k and best rank-k approximation of X using truncated SVD(according to Eckart-Young theorem).
+    """    
+    """Generator for low rank 
+    approximation of a matrix X using truncated SVD.
+
+    Args:
+        X (numpy.ndarray): a numerical matrix
+
+    Yields:
+        numpy.ndarray: best rank-k approximation of X using truncated SVD(according to Eckart-Young theorem).
+    """    
+    U, S, V = np.linalg.svd(X, full_matrices=False)
+    r = 0
+    Y = np.zeros_like(X, dtype='float64')
+    while (r<len(S)):
+      Y = Y + S[r] * (U[:,r,np.newaxis] @ V[r,:, np.newaxis].T)
+      r += 1
+      yield r, Y
+```
+
+
+
+```{python}
+g = gen_rank_k_approx(X_reshaped) 
+```
+```{python}
+for i in range(100):
+    _, Xr = next(g)
+    if i % 10 ==0:  
+      plt.figure(figsize=(5, 5))
+      plt.imshow(
+          Xr
+          .clip(min=0, max=255)
+          .astype('int')
+          .reshape(n_rows, n_cols, n_channels)
+      )
+      _ = plt.axis('off')
+      plt.tight_layout()
+```
